--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Private Message</title>
 
     <script src="./public/js/app.js" type="module" defer></script>
-	  <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script> -->
     
     <link rel="stylesheet" href="./public/css/output.css" />
   </head>
@@ -55,44 +55,46 @@
             </div>
             <div class="flex flex-col space-y-1 mt-4 -mx-2 h-[22rem] overflow-y-auto" id="chats-container">
 
-                <!-- HERE COMES THE CONTACTS-->
+              <div class="animate-pulse flex space-x-4 items-center p-2">
+                <div class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"></div>
+                <div class="flex-1 space-y-6 py-1">
+                  <div class="h-2 bg-slate-600 dark:bg-slate-400 rounded"></div>
+                </div>
+              </div>
+
+              <div class="animate-pulse flex space-x-4 items-center p-2">
+                <div class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"></div>
+                <div class="flex-1 space-y-6 py-1">
+                  <div class="h-2 bg-slate-600 dark:bg-slate-400 rounded"></div>
+                </div>
+              </div>
+
+              <div class="animate-pulse flex space-x-4 items-center p-2">
+                <div class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"></div>
+                <div class="flex-1 space-y-6 py-1">
+                  <div class="h-2 bg-slate-600 dark:bg-slate-400 rounded"></div>
+                </div>
+              </div>
+
+              <div class="animate-pulse flex space-x-4 items-center p-2">
+                <div class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"></div>
+                <div class="flex-1 space-y-6 py-1">
+                  <div class="h-2 bg-slate-600 dark:bg-slate-400 rounded"></div>
+                </div>
+              </div>
 
             </div>
           </div>
         </div>
         <div class="flex flex-col flex-auto h-full lg:p-6">
-          <div class="flex flex-col flex-auto flex-shrink-0 rounded-2xl h-full bg-gradient-to-tl from-indigo-100 to-indigo-200 dark:from-indigo-950 dark:to-black">
-            <div class="flex flex-row items-center h-16 rounded-t-xl bg-white dark:bg-black text-black dark:text-white duration-300 w-full">
-              <div class="flex-grow ml-4 cursor-pointer">
-                <div class="flex flex-row items-center relative w-full">
-                  <img src="https://api.lorem.space/image/face?w=150&h=150" class="flex items-center justify-center h-8 w-8 bg-orange-200 rounded-full">
-                  <div class="ml-2 text-sm font-semibold">Philip Tucker
-                  </div>
-                </div>
-              </div>
-              <button class="flex items-center justify-center text-gray-500 hover:text-gray-800 active:bg-indigo-200 dark:hover:text-gray-300 dark:active:bg-indigo-700 p-2 rounded-xl flex-shrink-0">
-                <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24">
-                  <path d="M12 13a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z">
-                  </path>
-                  <path d="M12 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z">
-                  </path>
-                  <path d="M12 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z">
-                  </path>
-                </svg>
-              </button>
+          <div id="chat-wrapper" class="flex flex-col flex-auto flex-shrink-0 rounded-2xl h-full bg-gradient-to-tl from-indigo-100 to-indigo-200 dark:from-indigo-950 dark:to-black">
+            <div id="chat-header" class="flex flex-row items-center h-16 rounded-t-xl bg-white dark:bg-black text-black dark:text-white duration-300 w-full">
+
             </div>
-            <div class="flex flex-col h-full overflow-x-auto p-4 my-2">
+            <div id="chat-content" class="flex flex-col h-full overflow-x-auto p-4 my-2">
               <div class="flex flex-col h-full rounded-2xl">
-                <div class="grid grid-cols-12 gap-y-2" id="chat-messages">
-                  <div class="col-start-1 col-end-8 p-3 rounded-lg">
-                    <div class="flex flex-row items-center">
-                      <img src="https://api.lorem.space/image/face?w=150&h=150" class="flex items-center justify-center h-8 w-8 bg-orange-200 rounded-full">
-                      <div class="relative ml-3 text-sm bg-white dark:bg-black text-black dark:text-white duration-300 py-2 px-4 shadow rounded-xl">
-                        <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae unde aliquid, laboriosam provident reiciendis autem?
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                <div class="grid grid-cols-12 gap-y-2" id="messages-container">
+                  
                 </div>
               </div>
             </div>
