--- a/client/index.html
+++ b/client/index.html
@@ -11,11 +11,11 @@
     
     <link rel="stylesheet" href="./public/css/output.css" />
   </head>
-  <body class="bg-white dark:bg-black text-black dark:text-white duration-300">
+  <body class="bg-[#fefefe] dark:bg-[#080808] text-black dark:text-white duration-300">
     <div class="flex h-screen antialiased text-gray-800">
       <div class="flex flex-row h-full w-full overflow-x-hidden">
-        <div class="hidden lg:flex flex-col p-6 w-64 bg-white dark:bg-black text-black dark:text-white duration-300 flex-shrink-0">
-          <div class="flex flex-row items-center h-16 rounded-t-xl bg-white dark:bg-black text-black dark:text-white duration-300 w-full justify-between">
+        <div class="hidden lg:flex flex-col p-6 w-64 bg-[#fefefe] dark:bg-[#080808] text-black dark:text-white duration-300 flex-shrink-0">
+          <div class="flex flex-row items-center h-16 rounded-t-xl bg-[#fefefe] dark:bg-[#080808] text-black dark:text-white duration-300 w-full justify-between">
             <button class="text-gray-500 hover:text-gray-800 active:bg-indigo-200 dark:hover:text-gray-300 dark:active:bg-indigo-700 p-2 rounded-xl">
               <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24">
                 <path d="M9 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z">
@@ -87,8 +87,8 @@
           </div>
         </div>
         <div class="flex flex-col flex-auto h-full lg:p-6">
-          <div id="chat-wrapper" class="flex flex-col flex-auto flex-shrink-0 rounded-2xl h-full bg-gradient-to-tl from-indigo-100 to-indigo-200 dark:from-indigo-950 dark:to-black">
-            <div id="chat-header" class="flex flex-row items-center h-16 rounded-t-xl bg-white dark:bg-black text-black dark:text-white duration-300 w-full">
+          <div id="chat-wrapper" class="flex flex-col flex-auto flex-shrink-0 lg:rounded-2xl h-full bg-gradient-to-tl from-[#f8f6ff] to-[#e9e2ff] dark:from-[#2e2e2e] dark:to-black">
+            <div id="chat-header" class="flex flex-row items-center h-16 rounded-t-xl bg-[#f7f7f7] dark:bg-[#1c1c1c] text-black dark:text-white duration-300 w-full">
 
             </div>
             <div id="chat-content" class="flex flex-col h-full overflow-x-auto p-4 my-2">
@@ -98,7 +98,7 @@
                 </div>
               </div>
             </div>
-            <form id="chat-form" class="flex flex-row items-center h-16 p-4 rounded-b-xl bg-white dark:bg-black text-black dark:text-white duration-300 w-full px-4">
+            <form id="chat-form" class="flex flex-row items-center h-16 p-4 rounded-b-xl bg-[#f7f7f7] dark:bg-[#1c1c1c] text-black dark:text-white duration-300 w-full px-4">
               <div>
                 <button class="flex items-center justify-center text-gray-500 hover:text-gray-800 dark:hover:text-gray-300">
                   <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -109,7 +109,7 @@
               </div>
               <div class="flex-grow ml-4">
                 <div class="relative w-full">
-                  <input type="text" autocomplete="off" class="flex w-full border rounded-xl bg-indigo-50 dark:bg-gray-900 focus:outline-none focus:border-indigo-300 pl-4 h-10" id="chat-input" />
+                  <input type="text" autocomplete="off" class="flex w-full border rounded-xl bg-[#fefefe] dark:bg-[#121212] focus:outline-none focus:border-indigo-300 pl-4 h-10" id="chat-input" />
                   <button class="absolute flex items-center justify-center h-full w-12 right-0 top-0 text-gray-400 hover:text-gray-600">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
