--- a/client/index.html
+++ b/client/index.html
@@ -8,130 +8,158 @@
 
     <script src="./public/js/app.js" type="module" defer></script>
     <!-- <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script> -->
-    
+
     <link rel="stylesheet" href="./public/css/output.css" />
   </head>
-  <body class="bg-[#fefefe] dark:bg-[#080808] text-black dark:text-white duration-300">
+  <body
+    class="bg-[#fefefe] dark:bg-[#080808] text-black dark:text-white duration-300"
+  >
     <div class="flex h-screen antialiased text-gray-800">
       <div class="flex flex-row h-full w-full overflow-x-hidden">
-        <div class="hidden lg:flex flex-col p-6 w-64 bg-[#fefefe] dark:bg-[#080808] text-black dark:text-white duration-300 flex-shrink-0">
-          <div class="flex flex-row items-center h-16 rounded-t-xl bg-[#fefefe] dark:bg-[#080808] text-black dark:text-white duration-300 w-full justify-between">
-            <button class="text-gray-500 hover:text-gray-800 active:bg-indigo-200 dark:hover:text-gray-300 dark:active:bg-indigo-700 p-2 rounded-xl">
-              <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24">
-                <path d="M9 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z">
-                </path>
-                <path d="M3 21v-2a4 4 0 0 1 4-4h4a4 4 0 0 1 4 4v2">
-                </path>
-                <path d="M16 3.133a4 4 0 0 1 0 7.75">
-                </path>
-                <path d="M21 20.998v-2a4 4 0 0 0-3-3.85">
-                </path>
+        <div
+          class="hidden lg:flex flex-col p-6 w-64 bg-[#fefefe] dark:bg-[#080808] text-black dark:text-white duration-300 flex-shrink-0"
+        >
+          <div
+            class="flex flex-row items-center h-16 rounded-t-xl bg-[#fefefe] dark:bg-[#080808] text-black dark:text-white duration-300 w-full justify-between"
+          >
+            <button
+              class="text-gray-500 hover:text-gray-800 active:bg-indigo-200 dark:hover:text-gray-300 dark:active:bg-indigo-400 p-2 rounded-xl"
+            >
+              <svg
+                class="h-6 w-6"
+                fill="none"
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path d="M9 11a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z"></path>
+                <path d="M3 21v-2a4 4 0 0 1 4-4h4a4 4 0 0 1 4 4v2"></path>
+                <path d="M16 3.133a4 4 0 0 1 0 7.75"></path>
+                <path d="M21 20.998v-2a4 4 0 0 0-3-3.85"></path>
               </svg>
             </button>
-            <button id="theme-button" class="text-gray-500 hover:text-gray-800 dark:hover:text-gray-300 dark:active:bg-indigo-700 active:bg-indigo-200 p-2 rounded-xl">
-              <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24">
-                <path d="M12 9a3 3 0 0 0 0 6V9Z">
-                </path>
-                <path d="M6 6h3.5L12 3.5 14.5 6H18v3.5l2.5 2.5-2.5 2.5V18h-3.5L12 20.5 9.5 18H6v-3.5L3.5 12 6 9.5V6Z">
-                </path>
+            <button
+              id="theme-button"
+              class="text-gray-500 hover:text-gray-800 dark:hover:text-gray-300 dark:active:bg-indigo-400 active:bg-indigo-200 p-2 rounded-xl"
+            >
+              <svg
+                class="h-6 w-6"
+                fill="none"
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path d="M12 9a3 3 0 0 0 0 6V9Z"></path>
+                <path
+                  d="M6 6h3.5L12 3.5 14.5 6H18v3.5l2.5 2.5-2.5 2.5V18h-3.5L12 20.5 9.5 18H6v-3.5L3.5 12 6 9.5V6Z"
+                ></path>
               </svg>
             </button>
-            <button class="text-gray-500 hover:text-gray-800 active:bg-indigo-200 dark:hover:text-gray-300 dark:active:bg-indigo-700 p-2 rounded-xl">
-              <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24">
-                <path d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 0 0-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 0 0-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.723 1.723 0 0 0-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 0 0-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 0 0 1.066-2.573c-.94-1.543.826-3.31 2.37-2.37 1 .608 2.296.07 2.572-1.065Z">
-                </path>
-                <path d="M12 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z">
-                </path>
+            <button
+              class="text-gray-500 hover:text-gray-800 active:bg-indigo-200 dark:hover:text-gray-300 dark:active:bg-indigo-400 p-2 rounded-xl"
+            >
+              <svg
+                class="h-6 w-6"
+                fill="none"
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 0 0-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 0 0-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.723 1.723 0 0 0-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 0 0-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 0 0 1.066-2.573c-.94-1.543.826-3.31 2.37-2.37 1 .608 2.296.07 2.572-1.065Z"
+                ></path>
+                <path d="M12 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"></path>
               </svg>
             </button>
           </div>
           <div class="flex flex-col my-4">
             <div class="flex flex-row items-center justify-between text-xs">
-              <span class="font-bold">Active Chats
-              </span>
-              <span id="active-chats-numbers" class="flex items-center justify-center bg-indigo-300 dark:bg-indigo-700 h-4 w-4 rounded-full">
+              <span class="font-bold">Active Chats </span>
+              <span
+                id="active-chats-numbers"
+                class="flex items-center justify-center bg-indigo-300 dark:bg-indigo-700 h-4 w-4 rounded-full"
+              >
                 0
               </span>
             </div>
-            <div class="flex flex-col space-y-1 mt-4 -mx-2 h-[22rem] overflow-y-auto" id="chats-container">
-
+            <div
+              class="flex flex-col space-y-1 mt-4 -mx-2 h-[22rem] overflow-y-auto"
+              id="chats-container"
+            >
               <div class="animate-pulse flex space-x-4 items-center p-2">
-                <div class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"></div>
+                <div
+                  class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"
+                ></div>
                 <div class="flex-1 space-y-6 py-1">
                   <div class="h-2 bg-slate-600 dark:bg-slate-400 rounded"></div>
                 </div>
               </div>
 
               <div class="animate-pulse flex space-x-4 items-center p-2">
-                <div class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"></div>
+                <div
+                  class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"
+                ></div>
                 <div class="flex-1 space-y-6 py-1">
                   <div class="h-2 bg-slate-600 dark:bg-slate-400 rounded"></div>
                 </div>
               </div>
 
               <div class="animate-pulse flex space-x-4 items-center p-2">
-                <div class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"></div>
+                <div
+                  class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"
+                ></div>
                 <div class="flex-1 space-y-6 py-1">
                   <div class="h-2 bg-slate-600 dark:bg-slate-400 rounded"></div>
                 </div>
               </div>
 
               <div class="animate-pulse flex space-x-4 items-center p-2">
-                <div class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"></div>
+                <div
+                  class="rounded-full bg-slate-600 dark:bg-slate-400 h-10 w-10"
+                ></div>
                 <div class="flex-1 space-y-6 py-1">
                   <div class="h-2 bg-slate-600 dark:bg-slate-400 rounded"></div>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
         <div class="flex flex-col flex-auto h-full lg:p-6">
-          <div id="chat-wrapper" class="flex flex-col flex-auto flex-shrink-0 lg:rounded-2xl h-full bg-gradient-to-tl from-[#f8f6ff] to-[#e9e2ff] dark:from-[#2e2e2e] dark:to-black">
-            <div id="chat-header" class="flex flex-row items-center h-16 rounded-t-xl bg-[#f7f7f7] dark:bg-[#1c1c1c] text-black dark:text-white duration-300 w-full">
-
-            </div>
-            <div id="chat-content" class="flex flex-col h-full overflow-x-auto p-4 my-2">
+          <div
+            id="chat-wrapper"
+            class="flex flex-col flex-auto flex-shrink-0 lg:rounded-2xl h-full bg-gradient-to-tl from-[#f8f6ff] to-[#e9e2ff] dark:from-[#2e2e2e] dark:to-black"
+          >
+            <div
+              id="chat-header"
+              class="flex flex-row items-center h-16 lg:rounded-t-xl bg-[#f7f7f7] dark:bg-[#1c1c1c] text-black dark:text-white duration-300 w-full px-2"
+            ></div>
+            <div
+              id="chat-content"
+              class="flex flex-col h-full overflow-x-auto p-4 my-2"
+            >
               <div class="flex flex-col h-full rounded-2xl">
-                <div class="grid grid-cols-12 gap-y-2" id="messages-container">
-                  
-                </div>
+                <div
+                  class="grid grid-cols-12 gap-y-2"
+                  id="messages-container"
+                ></div>
               </div>
             </div>
-            <form id="chat-form" class="flex flex-row items-center h-16 p-4 rounded-b-xl bg-[#f7f7f7] dark:bg-[#1c1c1c] text-black dark:text-white duration-300 w-full px-4">
-              <div>
-                <button class="flex items-center justify-center text-gray-500 hover:text-gray-800 dark:hover:text-gray-300">
-                  <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13">
-                    </path>
-                  </svg>
-                </button>
-              </div>
-              <div class="flex-grow ml-4">
-                <div class="relative w-full">
-                  <input type="text" autocomplete="off" class="flex w-full border rounded-xl bg-[#fefefe] dark:bg-[#121212] focus:outline-none focus:border-indigo-300 pl-4 h-10" id="chat-input" />
-                  <button class="absolute flex items-center justify-center h-full w-12 right-0 top-0 text-gray-400 hover:text-gray-600">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z">
-                      </path>
-                    </svg>
-                  </button>
-                </div>
-              </div>
-              <button class="flex items-center justify-center bg-indigo-500 hover:bg-indigo-600 active:bg-indigo-700 rounded-xl text-white ml-1 px-4 py-2 flex-shrink-0">
-                <svg class="w-5 h-5 rotate-45" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8">
-                  </path>
-                </svg>
-              </button>
-            </form>
+            <form
+              id="chat-form"
+              class="flex flex-row items-center h-16 p-4 lg:rounded-b-xl bg-[#f7f7f7] dark:bg-[#1c1c1c] text-black dark:text-white duration-300 w-full px-4"
+            ></form>
           </div>
         </div>
       </div>
     </div>
   </body>
 </html>
-
 
 <!--░██████╗██╗░░░██╗░█████╗░░█████╗░████████╗██╗░░░░░███████╗░░░██████╗░███████╗██╗░░░██╗
 ██╔════╝╚██╗░██╔╝██╔══██╗██╔══██╗╚══██╔══╝██║░░░░░██╔════╝░░░██╔══██╗██╔════╝██║░░░██║
