worked on login page design

--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/react.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>PrivateMessage</title>
   </head>
-  <body class="font-roboto bg-gradient-to-br from-neutral-300 to-blue-800">
+  <body class="font-roboto bg-gradient-to-tl from-[#f8f6ff] to-[#dad0fd]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
