--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PrivateMessage</title>
   </head>
-  <body class="font-roboto bg-gradient-to-tl from-[#f8f6ff] to-[#dad0fd]">
+  <body class="bg-gradient-to-tl from-[#f8f6ff] to-[#dad0fd]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
