edited background color

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <title>PrivateMessage</title>
 </head>
 
-<body class="bg-gradient-to-tl from-[#f8f6ff] to-[#dad0fd]">
+<body class="bg-gradient-to-br from-[#f1eaff] via-[#f0e9ff] to-[#ba99fe]">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
