PM-5: renamed project to Whispee

--- a/client/index.html
+++ b/client/index.html
@@ -1,31 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/react.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Whispee</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./src/assets/react.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PrivateMessage</title>
-</head>
-
-<body class="bg-gradient-to-br from-[#f1eaff] via-[#f0e9ff] to-[#ba99fe]">
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
-</html>
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./src/assets/react.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/output.css" />
-  <title>PrivateMessage</title>
-</head>
-
-<body class="font-roboto bg-gradient-to-tl from-[#f8f6ff] to-[#dad0fd]">
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
+  <body class="bg-gradient-to-br from-[#f1eaff] via-[#f0e9ff] to-[#ba99fe]">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
