PM-37: modernized user interface

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Whispee</title>
   </head>
 
-  <body class="bg-gradient-to-br from-[#f1eaff] via-[#f0e9ff] to-[#ba99fe]">
+  <body className="bg-gradient-to-br from-[#f1eaff] via-[#f0e9ff] to-[#ba99fe]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
