PM-35: added user session system

--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,10 @@
     <title>Whispee</title>
   </head>
 
-  <body className="bg-gradient-to-br from-[#f1eaff] via-[#f0e9ff] to-[#ba99fe]">
-    <div id="root"></div>
+  <body
+    className="bg-gradient-to-br from-[#f1eaff] via-[#f0e9ff] to-[#ba99fe] overflow-hidden"
+  >
+    <div id="root" className="overflow-x-hidden"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
