--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Whispee Chat</title>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="./src/assets/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Whispee Chat</title>
+	</head>
 
-  <body
-    className="bg-gradient-to-br from-[#f1eaff] via-[#f0e9ff] to-[#ba99fe] overflow-hidden"
-  >
-    <div id="root" className="overflow-x-hidden"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+	<body
+		className="bg-gradient-to-br from-[#f1eaff] via-[#f0e9ff] to-[#ba99fe] overflow-hidden">
+		<div id="root" className="overflow-x-hidden"></div>
+		<script type="module" src="/src/main.jsx"></script>
+	</body>
 </html>
+
+<!--
+  Copyright (C) 2023 - Execan Technologies. All rights reserved
+
+  This work is licensed under a Creative Commons Attribution-NonCommercial-NoDerivatives
+  4.0 International License. 
+-->
